--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,7 +4,7 @@ version: '3.1'
 services:
   db:
     image: postgres
-    restart: no
+    restart: always
     environment:
       POSTGRES_PASSWORD: example
     ports:
