--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "test": "jest --watch"
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "dotenv": "^16.0.1",
