--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@tailwindcss/typography": "^0.5.4",
     "@types/jasmine": "~4.0.0",
     "autoprefixer": "^10.4.8",
+    "jasmine-auto-spies": "^6.9.9",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
